--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
         <div class="row">
             <div class="left-column">
-                <img src="C:\Users\charl\OneDrive\Desktop\portfoli pic.jpg">
+                <img src="images/portfoli pic.jpg"/>
             </div>
             <div class="right-column">
                 <h2 class="subtitle">About Me</h2>
@@ -57,7 +57,8 @@
                 <div class="tab-contents" id="experience">
                     <ul>
                         <li><span>Web Designer</span><br>Greenhaus Cannabis Co</li>
-                        <li><span>Web Designer</span><br>Las Margaritas Mexican Cantina</li>
+                        <li><span>Web Designer</span><br>Kelli Tipton for Cumberland Co<br>Property Assessor</li>
+                        <li><span>Web Designer</span><br>Grace Givers Home Care</li>
                     </ul>
                 </div>
 
@@ -80,9 +81,9 @@
         <div class="Projects">
             <div class="project">
                 <i class="fas fa-code"></i>
-                <h2>Web Design</h2>
+                <h2>Quote Generator</h2>
                 <a href="https://www.example2.com" target="_blank">
-                    <img src="C:\Users\charl\OneDrive\Desktop\quote generator.jpg" alt="Website Preview">
+                    <img src="images/quote generator.jpg"/>
                     <div class="overlay">
                         <span>Click to view</span>
                     </div>
@@ -92,7 +93,7 @@
                 <i class="fas fa-code"></i>
                 <h2>Web Design</h2>
                 <a href="greenhauscc.com" target="_blank">
-                    <img src="C:\Users\charl\OneDrive\Desktop\ghccweb.jpg" alt="Website Preview">
+                    <img src="images/ghccweb.jpg"/>
                     <div class="overlay">
                         <span>Click to view</span>
                     </div>
@@ -102,7 +103,7 @@
                 <i class="fas fa-code"></i>
                 <h2>Web Design</h2>
                 <a href="https://www.example1.com" target="_blank">
-                    <img src="C:\Users\charl\OneDrive\Desktop\gracegivers.jpg" alt="Website Preview">
+                    <img src="images/gracegivers.jpg"/>
                     <div class="overlay">
                         <span>Click to view</span>
                     </div>
@@ -144,7 +145,6 @@
 </script>
 </body>
 </html>
-
 
 
 
