--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
         <div class="row">
             <div class="left-column">
-                <img src="images/portfoli pic.jpg"/>
+                <img src="portfoli pic.jpg"/>
             </div>
             <div class="right-column">
                 <h2 class="subtitle">About Me</h2>
@@ -83,7 +83,7 @@
                 <i class="fas fa-code"></i>
                 <h2>Quote Generator</h2>
                 <a href="https://www.example2.com" target="_blank">
-                    <img src="images/quote generator.jpg"/>
+                    <img src="quote generator.jpg"/>
                     <div class="overlay">
                         <span>Click to view</span>
                     </div>
@@ -93,7 +93,7 @@
                 <i class="fas fa-code"></i>
                 <h2>Web Design</h2>
                 <a href="greenhauscc.com" target="_blank">
-                    <img src="images/ghccweb.jpg"/>
+                    <img src="ghccweb.jpg"/>
                     <div class="overlay">
                         <span>Click to view</span>
                     </div>
@@ -103,7 +103,7 @@
                 <i class="fas fa-code"></i>
                 <h2>Web Design</h2>
                 <a href="https://www.example1.com" target="_blank">
-                    <img src="images/gracegivers.jpg"/>
+                    <img src="gracegivers.jpg"/>
                     <div class="overlay">
                         <span>Click to view</span>
                     </div>
