--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="project">
                 <i class="fas fa-code"></i>
                 <h2>Quote Generator</h2>
-                <a href="https://www.example2.com" target="_blank">
+                <a href="https://github.com/Charlacooper/Project1" target="_blank">
                     <img src="quote generator.jpg"/>
                     <div class="overlay">
                         <span>Click to view</span>
