--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="project">
                 <i class="fas fa-code"></i>
                 <h2>Web Design</h2>
-                <a href="greenhauscc.com" target="_blank">
+                <a href="https://greenhauscc.com" target="_blank">
                     <img src="ghccweb.jpg"/>
                     <div class="overlay">
                         <span>Click to view</span>
@@ -102,7 +102,7 @@
             <div class="project">
                 <i class="fas fa-code"></i>
                 <h2>Web Design</h2>
-                <a href="https://www.example1.com" target="_blank">
+                <a href="https://www.gracegivershomecare.com" target="_blank">
                     <img src="gracegivers.jpg"/>
                     <div class="overlay">
                         <span>Click to view</span>
